--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,20 +4,20 @@
     <table>
         <tr valign='top'>
             <td><img src="{{ user.avatar(156) }}"></td>
-            <td><h1>{{user.username}}</h1></td>
+            <td>
+                <h1>{{user.username}}</h1>
+                {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+                {% if user.last_seen %}<p>{{ user.last_seen }}</p>{% endif %}
+                {% if user == current_user %}
+                <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+                {% endif %}
+            </td>
         </tr>
     </table>
     <hr>
     {% for post in posts %}
     <p>
-        <table>
-        <tr valign='top'>
-            <td><img src="{{ user.avatar(25) }}"></td>
-            <td>
-                {{ post.author.username }} says: <b>{{ post.blog }}</b>
-            </td>
-        </tr>
-        </table>
+        {% include '_posts.html' %}
     </p>
     {% endfor %}
 {% endblock %}
